# cmake-project-template

./: CMakeLists.txt  default.cmake  main.cpp
